...
    <string name="begin_now">BEGIN NOW</string>
    <string name="explication_text_username_init">You can click on the CHECK AVAILABILITY button to check if your proposition is available. After you click on the VALIDATE button your user name is fixed.</string>
    <string name="how_many_time_do_you_want_to_practice_exercise_each_day_in_minutes">How many minutes do you plan to practice exercise each day ?</string>
    <string name="profile_menu_item">Profile</string>
    <string name="draw_menu_item">Draw</string>
    <string name="history_menu_item">History</string>
    <string name="community_menu_item">Community</string>
    <string name="friends_menu_item">Friends</string>
    <string name="username">Username</string>
    <string name="email_example">example@smth.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="stats">Stats</string>
    <string name="stats_and_stuff">Stats and stuff</string>
...
    <string name="create">Create</string>
    <string name="tournament_creation_title_error">* Title should not be empty</string>
    <string name="tournament_creation_description_error">* Description should not be empty</string>
    <string name="tournament_creation_start_date_error">* Starting time and date should be at least 1 hour from now</string>
    <string name="tournament_creation_end_date_error">* Ending time and date should be at least 1 day from starting day and time</string>
    <string name="tournament_creation_visibility_error">* One visibility option should be checked</string>
    <string name="create_new_tournament">Create new tournament</string>
    <string name="friends">FRIENDS</string>
    <string name="choose_a_new_profile_photo">Choose a new profile photo :</string>
    <string name="modify_profile_photo_description">You can choose a new profile photo and click on VALIDATE to set it. If you want to keep your past profile photo, click on CANCEL.</string>
    <string name="actual_profile_photo">Actual profile photo :</string>
    <string name="new_profile_photo_selected">New profile photo selected :</string>
    <string name="error_select_new_profile_photo">You have forgotten to select a new profile photo.</string>
...
