<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Community -->
    <item
        android:id="@+id/community_menu_item"
        android:enabled="true"
        android:icon="@drawable/ic_community"
        android:title="@string/community_menu_item" />
    <!-- Friends -->
    <item
        android:id="@+id/friends_menu_item"
...
